--- a/GuocheProtal/Web.config
+++ b/GuocheProtal/Web.config
@@ -17,6 +17,10 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="mailServer" value="" />
+    <add key="mailFrom" value="wangjialin@gcev.net" />
+    <add key="mailPwd" value="" />
+    <add key="mailTo" value="wangjialin@gcev.net" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
