--- a/GuocheProtal/bin/GuocheProtal.dll.config
+++ b/GuocheProtal/bin/GuocheProtal.dll.config
@@ -17,6 +17,10 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="mailServer" value="smtp.163.com" />
+    <add key="mailFrom" value="xiaoyinshen1986@163.com" />
+    <add key="mailPwd" value="Ethen@1986$" />
+    <add key="mailTo" value="xiaoyinshen1986@163.com" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
